@@ -1,0 +1,51 @@
+/* quartz_record.h: Records in quartz databases
+ *
+ * ----START-LICENCE----
+ * Copyright 1999,2000 BrightStation PLC
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * USA
+ * -----END-LICENCE-----
+ */
+
+#ifndef OM_HGUARD_QUARTZ_RECORD_H
+#define OM_HGUARD_QUARTZ_RECORD_H
+
+#include "config.h"
+#include "quartz_table.h"
+#include "om/omtypes.h"
+#include "om/omdocument.h"
+
+/** A record in a quartz database.
+ */
+class QuartzRecord {
+    private:
+    public:
+	QuartzRecord();
+
+	/** Add a new record to the table.
+	 */
+	static om_docid add_record(QuartzBufferedTable & table,
+				   om_docid did,
+				   const OmData & data);
+
+	/** Delete a record from the table.
+	 */
+	static void delete_record(QuartzBufferedTable & table,
+				  om_docid did);
+
+};
+
+#endif /* OM_HGUARD_QUARTZ_RECORD_H */
